tests/snapshots/lexer__complex_math.snap
---
source: tests/lexer.rs
expression: tokens
---
[
    Identifier - <13, 15>, line: 2,
    Identifier - <16, 20>, line: 2,
    OpenParen - <20, 21>, line: 2,
    CloseParen - <21, 22>, line: 2,
    OpenBrace - <23, 24>, line: 2,
    Identifier - <41, 44>, line: 3,
    Identifier - <45, 46>, line: 3,
    Eq - <47, 48>, line: 3,
    OpenParen - <49, 50>, line: 3,
    Literal - <50, 51>, line: 3,
    Multiply - <52, 53>, line: 3,
    Literal - <54, 55>, line: 3,
    CloseParen - <55, 56>, line: 3,
    Divide - <57, 58>, line: 3,
    OpenParen - <59, 60>, line: 3,
    OpenParen - <60, 61>, line: 3,
    Literal - <61, 62>, line: 3,
    Subtract - <63, 64>, line: 3,
    Literal - <65, 66>, line: 3,
    CloseParen - <66, 67>, line: 3,
    Multiply - <68, 69>, line: 3,
    Subtract - <70, 71>, line: 3,
    Literal - <71, 72>, line: 3,
    CloseParen - <72, 73>, line: 3,
    EndOfLine - <73, 74>, line: 3,
    CloseBrace - <87, 88>, line: 4,
]
