tests/snapshots/lexer__larger_test.snap
---
source: tests/lexer.rs
expression: tokens
---
[
    Identifier - <1, 6>, line: 2,
    Identifier - <7, 10>, line: 2,
    Assignment - <11, 12>, line: 2,
    Literal - <13, 14>, line: 2,
    EndOfLine - <14, 15>, line: 2,
    Identifier - <17, 19>, line: 4,
    Identifier - <20, 24>, line: 4,
    OpenParen - <24, 25>, line: 4,
    Identifier - <25, 29>, line: 4,
    CloseParen - <29, 30>, line: 4,
    OpenBrace - <31, 32>, line: 4,
    Identifier - <37, 40>, line: 5,
    Identifier - <41, 42>, line: 5,
    Assignment - <43, 44>, line: 5,
    Literal - <45, 46>, line: 5,
    EndOfLine - <46, 47>, line: 5,
    Identifier - <52, 55>, line: 6,
    Identifier - <56, 57>, line: 6,
    Assignment - <58, 59>, line: 6,
    Identifier - <60, 64>, line: 6,
    EndOfLine - <64, 65>, line: 6,
    Identifier - <70, 75>, line: 7,
    OpenParen - <75, 76>, line: 7,
    Literal - <76, 82>, line: 7,
    CloseParen - <82, 83>, line: 7,
    EndOfLine - <83, 84>, line: 7,
    Identifier - <89, 94>, line: 8,
    OpenParen - <94, 95>, line: 8,
    Literal - <95, 98>, line: 8,
    CloseParen - <98, 99>, line: 8,
    EndOfLine - <99, 100>, line: 8,
    Identifier - <107, 112>, line: 11,
    OpenParen - <112, 113>, line: 11,
    Identifier - <113, 114>, line: 11,
    CloseParen - <114, 115>, line: 11,
    EndOfLine - <115, 116>, line: 11,
    Identifier - <121, 126>, line: 12,
    OpenParen - <126, 127>, line: 12,
    Literal - <127, 128>, line: 12,
    CloseParen - <128, 129>, line: 12,
    EndOfLine - <129, 130>, line: 12,
    Identifier - <136, 140>, line: 14,
    OpenParen - <140, 141>, line: 14,
    CloseParen - <141, 142>, line: 14,
    EndOfLine - <142, 143>, line: 14,
    CloseBrace - <144, 145>, line: 15,
    Identifier - <147, 149>, line: 17,
    Identifier - <150, 154>, line: 17,
    OpenParen - <154, 155>, line: 17,
    CloseParen - <155, 156>, line: 17,
    OpenBrace - <156, 157>, line: 17,
    Identifier - <162, 164>, line: 18,
    Identifier - <165, 169>, line: 18,
    OpenBrace - <170, 171>, line: 18,
    CloseBrace - <177, 178>, line: 20,
    Identifier - <179, 183>, line: 20,
    OpenBrace - <184, 185>, line: 20,
    Identifier - <205, 210>, line: 22,
    OpenParen - <210, 211>, line: 22,
    Literal - <211, 212>, line: 22,
    CloseParen - <212, 213>, line: 22,
    EndOfLine - <213, 214>, line: 22,
    CloseBrace - <219, 220>, line: 23,
    CloseBrace - <221, 222>, line: 24,
    Identifier - <224, 226>, line: 26,
    Identifier - <227, 239>, line: 26,
    OpenParen - <239, 240>, line: 26,
    Identifier - <240, 244>, line: 26,
    Comma - <244, 245>, line: 26,
    Identifier - <246, 250>, line: 26,
    Comma - <250, 251>, line: 26,
    Identifier - <252, 256>, line: 26,
    CloseParen - <256, 257>, line: 26,
    OpenBrace - <258, 259>, line: 26,
    OpenBrace - <260, 261>, line: 27,
    Identifier - <267, 271>, line: 29,
    OpenParen - <272, 273>, line: 29,
    CloseParen - <273, 274>, line: 29,
    EndOfLine - <274, 275>, line: 29,
    CloseBrace - <276, 277>, line: 30,
    CloseBrace - <278, 279>, line: 31,
]
