tests/snapshots/lexer__math.snap
---
source: tests/lexer.rs
expression: tokens
---
[
    Identifier - <13, 15>, line: 2,
    Identifier - <16, 20>, line: 2,
    OpenParen - <20, 21>, line: 2,
    CloseParen - <21, 22>, line: 2,
    OpenBrace - <23, 24>, line: 2,
    Identifier - <41, 44>, line: 3,
    Identifier - <45, 46>, line: 3,
    Eq - <47, 48>, line: 3,
    Literal - <49, 50>, line: 3,
    Add - <51, 52>, line: 3,
    Literal - <53, 54>, line: 3,
    Divide - <55, 56>, line: 3,
    Literal - <57, 58>, line: 3,
    Multiply - <59, 60>, line: 3,
    Literal - <61, 62>, line: 3,
    Subtract - <63, 64>, line: 3,
    Literal - <65, 66>, line: 3,
    EndOfLine - <66, 67>, line: 3,
    CloseBrace - <80, 81>, line: 4,
]
