tests/snapshots/lexer__not.snap
---
source: tests/lexer.rs
expression: tokens
---
[
    Identifier - <13, 15>, line: 2,
    Identifier - <16, 20>, line: 2,
    OpenParen - <20, 21>, line: 2,
    CloseParen - <21, 22>, line: 2,
    OpenBrace - <23, 24>, line: 2,
    Identifier - <37, 40>, line: 3,
    Identifier - <41, 42>, line: 3,
    Eq - <43, 44>, line: 3,
    Not - <45, 46>, line: 3,
    Identifier - <46, 50>, line: 3,
    EndOfLine - <50, 51>, line: 3,
    CloseBrace - <64, 65>, line: 4,
]
