tests/snapshots/lexer__objects.snap
---
source: tests/lexer.rs
expression: tokens
---
[
    Identifier - <1, 4>, line: 2,
    Identifier - <5, 6>, line: 2,
    Assignment - <7, 8>, line: 2,
    Literal - <9, 10>, line: 2,
    EndOfLine - <10, 11>, line: 2,
    Identifier - <13, 16>, line: 4,
    Identifier - <17, 31>, line: 4,
    Assignment - <32, 33>, line: 4,
    OpenBrace - <34, 35>, line: 4,
    Identifier - <40, 51>, line: 5,
    Colon - <51, 52>, line: 5,
    Literal - <53, 55>, line: 5,
    Comma - <55, 56>, line: 5,
    CloseBrace - <57, 58>, line: 6,
    EndOfLine - <58, 59>, line: 6,
    Identifier - <61, 64>, line: 8,
    Identifier - <65, 66>, line: 8,
    Assignment - <67, 68>, line: 8,
    OpenBrace - <69, 70>, line: 8,
    Identifier - <75, 79>, line: 9,
    Colon - <79, 80>, line: 9,
    Literal - <81, 82>, line: 9,
    Comma - <82, 83>, line: 9,
    Identifier - <88, 93>, line: 10,
    Colon - <93, 94>, line: 10,
    Literal - <95, 104>, line: 10,
    Comma - <104, 105>, line: 10,
    Identifier - <110, 115>, line: 11,
    Colon - <115, 116>, line: 11,
    Identifier - <117, 118>, line: 11,
    Comma - <118, 119>, line: 11,
    Identifier - <124, 129>, line: 12,
    Colon - <129, 130>, line: 12,
    Identifier - <131, 145>, line: 12,
    Comma - <145, 146>, line: 12,
    Identifier - <151, 156>, line: 13,
    Colon - <156, 157>, line: 13,
    OpenBrace - <158, 159>, line: 13,
    Identifier - <168, 173>, line: 14,
    Colon - <173, 174>, line: 14,
    OpenBrace - <175, 176>, line: 14,
    Identifier - <189, 194>, line: 15,
    Colon - <194, 195>, line: 15,
    Literal - <196, 200>, line: 15,
    CloseBrace - <209, 210>, line: 16,
    CloseBrace - <215, 216>, line: 17,
    CloseBrace - <217, 218>, line: 18,
    EndOfLine - <218, 219>, line: 18,
    Identifier - <221, 226>, line: 20,
    OpenParen - <226, 227>, line: 20,
    Identifier - <227, 228>, line: 20,
    CloseParen - <228, 229>, line: 20,
    EndOfLine - <229, 230>, line: 20,
    Identifier - <231, 236>, line: 21,
    OpenParen - <236, 237>, line: 21,
    Identifier - <237, 238>, line: 21,
    Dot - <238, 239>, line: 21,
    Identifier - <239, 243>, line: 21,
    CloseParen - <243, 244>, line: 21,
    EndOfLine - <244, 245>, line: 21,
    Identifier - <246, 251>, line: 22,
    OpenParen - <251, 252>, line: 22,
    Identifier - <252, 253>, line: 22,
    Dot - <253, 254>, line: 22,
    Identifier - <254, 259>, line: 22,
    CloseParen - <259, 260>, line: 22,
    EndOfLine - <260, 261>, line: 22,
    Identifier - <262, 267>, line: 23,
    OpenParen - <267, 268>, line: 23,
    Identifier - <268, 269>, line: 23,
    Dot - <269, 270>, line: 23,
    Identifier - <270, 275>, line: 23,
    CloseParen - <275, 276>, line: 23,
    EndOfLine - <276, 277>, line: 23,
    Identifier - <278, 283>, line: 24,
    OpenParen - <283, 284>, line: 24,
    Identifier - <284, 285>, line: 24,
    Dot - <285, 286>, line: 24,
    Identifier - <286, 291>, line: 24,
    CloseParen - <291, 292>, line: 24,
    EndOfLine - <292, 293>, line: 24,
    Identifier - <294, 299>, line: 25,
    OpenParen - <299, 300>, line: 25,
    Identifier - <300, 301>, line: 25,
    Dot - <301, 302>, line: 25,
    Identifier - <302, 307>, line: 25,
    Dot - <307, 308>, line: 25,
    Identifier - <308, 319>, line: 25,
    CloseParen - <319, 320>, line: 25,
    EndOfLine - <320, 321>, line: 25,
    Identifier - <322, 327>, line: 26,
    OpenParen - <327, 328>, line: 26,
    Identifier - <328, 329>, line: 26,
    Dot - <329, 330>, line: 26,
    Identifier - <330, 335>, line: 26,
    CloseParen - <335, 336>, line: 26,
    EndOfLine - <336, 337>, line: 26,
    Identifier - <338, 343>, line: 27,
    OpenParen - <343, 344>, line: 27,
    Identifier - <344, 345>, line: 27,
    Dot - <345, 346>, line: 27,
    Identifier - <346, 351>, line: 27,
    Dot - <351, 352>, line: 27,
    Identifier - <352, 357>, line: 27,
    CloseParen - <357, 358>, line: 27,
    EndOfLine - <358, 359>, line: 27,
    Identifier - <360, 365>, line: 28,
    OpenParen - <365, 366>, line: 28,
    Identifier - <366, 367>, line: 28,
    Dot - <367, 368>, line: 28,
    Identifier - <368, 373>, line: 28,
    Dot - <373, 374>, line: 28,
    Identifier - <374, 379>, line: 28,
    Dot - <379, 380>, line: 28,
    Identifier - <380, 385>, line: 28,
    CloseParen - <385, 386>, line: 28,
    EndOfLine - <386, 387>, line: 28,
]
